# UpdateGeneIdentifiers

./: .Rprofile  .gitignore  Makefile  README.md  requirements.txt  setup.cfg  setup.py
examples/data/: sample_from_maf.tsv
examples/output/: all_fields_correspondences.xlsx  per_field_duplicates.xlsx
geneids/: __init__.py  biomart.py  make_gene_table.py  utils.py
geneids/tests/: conftest.py  test_biomart.py  test_make_gene_table.py  test_utils.py
update_gene_identifiers/: __init__.py  biomart_updater.py  hgnc_updater.py  table_maker.py
update_gene_identifiers/tests/: test_biomart_updater.py  test_table_maker.py  test_utils.py
