[metadata]
name = update_gene_identifiers 
description = "Function for updating gene symbols by connection to biomaRt database"
license = Apache License 2.0
version = 1.0.1
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
packages = update_gene_identifiers
install_requires = 
    numpy >= 1.19.1
    pandas >= 1.2.1
    rpy2 >= 3.4.1
